kubernetes/mongo-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: freeimage
spec:
  serviceName: "mongo-service" 
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongodb/mongodb-community-server:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 3Gi
