kubernetes/mongo-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: mongo-service
  namespace: freeimage
spec:
  type: ClusterIp
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
