kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freeimage-ingress
  namespace: freeimage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freeimage-service
            port:
              number: 3000
